--- a/src/components/BudgetCalculator.css
+++ b/src/components/BudgetCalculator.css
@@ -1,16 +1,23 @@
+/* override browser default */
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
+
+/* use viewport-relative units to cover page fully */
+body {
+  height: 100vh;
+  width: 100vw;
+}
+
+/* include border and padding in element width and height */
+* {
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
-}
-
-.temp-border {
-  border: 1px solid green;
-}i
-
-.pointer {
-  cursor: pointer;
-}
-.red {
-  color: red;
 }
 
 /* Calculator app starts here */
@@ -19,8 +26,6 @@
 	font-weight: 400;
 	font-size: 16px;
 	letter-spacing: 0px;
-	/* font-family: futura-pt; */
-	font-weight: 300;
 	font-style: normal;
 	font-size: 19px;
 	letter-spacing: .5px;
@@ -29,18 +34,117 @@
 }
 
 .header {
-padding: 35px 0;
+padding: 25px 0;
 width: 100%;
 line-height: 1em;
 background-color: #f8f8f6;
+display: flex;
+align-items: center;
 }
 
 .calculator-container h2 {
-font-family: futura-pt;
 font-weight: 400;
 font-style: normal;
 font-size: 28px;
 letter-spacing: 4px;
 text-transform: none;
 line-height: 1.2em;
+}
+
+.error {
+	color: red;
+	font-size: 12px;
+}
+
+.logo-image {
+	width: 150px;
+	margin-left: 30px;
+}
+
+button { 
+	color: #111;
+	border: 2px solid #111;
+	background-color: transparent;
+	transition: 0.1s background-color linear, 0.1s color linear;
+	cursor: pointer;
+	margin-left: 5px;
+	padding: 7px 11px;
+}
+
+button:hover { 
+	color: white;
+	border-width: 2px;
+	border-style: solid;
+	background-color: #111;
+	transition: 0.1s background-color linear, 0.1s color linear;
+	}
+
+.input-container {
+	margin-bottom: 10px;
+}
+
+input {
+	font-size: 18px;
+	border: 1px solid #999;
+	padding: 5px 10px;
+	text-align: right;
+}
+
+input:focus {
+	outline: none;
+}
+
+.display-budget {
+	font-size: 26px;
+	font-weight: 400;
+}
+
+.display-budget_click {
+	margin-top: -3;
+	color: rgb(172, 184, 172);
+	font-size: 12px;
+}
+
+.over-under {
+	border: 1px solid  rgb(172, 184, 172);
+	border-radius: 4px;
+	background-color: #beccbf;
+	width: 50%;
+	margin: auto;
+}
+
+.design-options-container {
+	border: 1px solid black;
+	width: 360px;
+	height: 250px;
+	border-radius: 4px;
+	background-color: #f2f5f2;
+}
+
+.design-options-title {
+	font-weight: 600;
+}
+
+.select-items {
+	margin: 10px 0 25px 0;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	gap: 15px;
+}
+
+.design-radio-box {
+	margin-top: 10px;
+	text-align: left;
+	padding-left: 25px;
+}
+
+.selection-math {
+	font-size: 18px;
+	font-weight: 400;
+}
+
+.status-options {
+	font-size: 18px;
+	font-weight: 400;
 }
