--- a/src/components/BudgetCalculator.css
+++ b/src/components/BudgetCalculator.css
@@ -1,26 +1,13 @@
-/* override browser default */
-html,
-body {
-  margin: 0;
-  padding: 0;
-}
-
-/* use viewport-relative units to cover page fully */
-body {
-  height: 100vh;
-  width: 100vw;
-}
-
-/* include border and padding in element width and height */
-* {
-  box-sizing: border-box;
-}
+/* 
+As I'm sure you will notice I didn't style this particularly for mobile
+so it will look less than stellar on your phone.  Obviously, in real life
+we'd fix that. 
+*/
 
 .App {
   text-align: center;
 }
 
-/* Calculator app starts here */
 .calculator-container {
 	font-family: "proxima-nova","Helvetica Neue",Helvetica,Arial,sans-serif;
 	font-weight: 400;
@@ -64,7 +51,7 @@ line-height: 1.2em;
 button { 
 	color: #111;
 	border: 2px solid #111;
-	background-color: transparent;
+	background-color: white;
 	transition: 0.1s background-color linear, 0.1s color linear;
 	cursor: pointer;
 	margin-left: 5px;
@@ -126,7 +113,8 @@ input:focus {
 }
 
 .select-items {
-	margin: 10px 0 25px 0;
+	margin-top: 10px;
+	padding-bottom: 35px;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
